traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:40: error: not found: value positionFinale
  while (!positionFinale()) {
          ^